fix: PlayerFilters - overlapping HT 'Show table' button
Ref: #253

--- a/content/resources/css/foxtrick.css
+++ b/content/resources/css/foxtrick.css
@@ -239,8 +239,13 @@ td.ft-lineup-cell { vertical-align: middle }
 .bold{ font-weight:700; }
 
 /* TeamStats filter */
-.ft-select-container { float: right; width: auto; }
-.ft-select-container > select { display: block; margin: 0; clear: right; }
+.ft-select-container {
+	width: auto;
+	float: inline-end;
+	padding-top: 5px;
+}
+.ft-select-container:has(#foxtrick-filter-select.sorting) { padding-top: 20px; }
+.ft-select-container > select { display: block; margin: 0; clear: both; float: inline-end }
 #foxtrick-filter-select option[value="attribute-all"] {background-color:#ccc;}
 
 /* same style as HT's a.flag img */
